test/preprocessor/fail/error.osl
#error "This should produce an error"
